-------------------------------------------------------------------------------
64 :
	REMOVED: HTTP_RAW, it was broken and no-one was using it.
	REMOVED: SQL_RAW + SQL_CUSTOM + STEAM  (V1 Protocols)

	Changed: TBBMalloc over to statically linked JEMalloc. No extra tbb/tbbmalloc dll's required anymore.

-------------------------------------------------------------------------------
63 :
	Improved: Changed Poco Library to use mysql_stmt_store_result(), should improve handling of Database Connection Lose when fetching results

-------------------------------------------------------------------------------
62 :
	FIXED: RCon crashes, might be all fixed now

	IMPROVED: Advanced Option to define seperator character used by SQL_CUSTOM + SQL_CUSTOM_V2 now can be defined in calls

-------------------------------------------------------------------------------
61 :
	FIXED: RCon crashes, should be fine now

	ADDED: Advanced Option to define seperator character used by SQL_CUSTOM + SQL_CUSTOM_V2

-------------------------------------------------------------------------------
60 :
	ADDED: Windows DLL Info. Stops arma complaining in RPT

	CHANGED: RCon addban + ban will automatically cause writebans to be called

-------------------------------------------------------------------------------
59 :
	FIXED: 9:ADD_DATABASE:<database>

	CHANGED: 9:TIME will now work if extension is locked or not

-------------------------------------------------------------------------------
58 :

	ADDED: 9:TIME or 9:TIME:<offset> will return time. Only works before you lock extension i.e 9:LOCK  if you need it afterwards use MISC Protocol
	ADDED: 9:SHUTDOWN will cause armaserver to shutdown nicely. Only works before you lock extension i.e 9:LOCK

	ADDED: START_RCON Option PLAYERKEY
	ADDED: SQL_CUSTOM / SQL_CUSTOM_V2 Option PLAYERKEY  (read Changelog for SQL_CUSTOM)
	FIXED: SQL_CUSTOM / SQL_CUSTOM_V2 Error Reporting when getting a result
