@@ -28,7 +28,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 #include "spdlog/spdlog.h"
 
 
-#define EXTDB_VERSION "64"
+#define EXTDB_VERSION "65"
 #define EXTDB_CONF_VERSION 5
 
 
